# 42sh

./: Makefile.am  README.md  configure.ac  testsuite.sh
IFS/: ifs.ltst  ifs_newline.tst  ifs_newline2.tst  ifs_newline3.tst  ifs_newline4.tst
alias/: builtin1.tst  builtin10.tst  builtin11.tst  builtin12.tst  builtin13.tst  builtin14.tst  builtin15.tst  builtin16.tst  builtin17.tst  builtin18.tst  builtin19.tst  builtin2.tst  builtin20.tst  builtin21.tst  builtin22.tst  builtin23.tst  builtin3.tst  builtin4.tst  builtin5.tst  builtin6.tst  builtin7.tst  builtin8.tst  fun.tst  just_builtin.tst  just_builtin1.tst  just_builtin2.tst  just_builtin3.tst  no_arg.tst  tricky.tst
and_or/: and_or_1.tst  and_or_2.tst
blocks/: indent.tst  missing_semicolon.tst  no_spaces.tst  redir.ltst  simple.ltst  unknown_command.tst
break/: break.ltst  continue.ltst
case/: error_cases.ltst  lots_of_a.tst  simple.ltst  simple_indent.tst  spaces.ltst
cd/: bad_number_parameters.tst  bad_path.tst  double_cd.tst  go_back.tst  go_home.tst  go_root.tst  go_root2.tst  go_tmp.tst  init_path.tst  simple_ls.tst  simple_path.tst  simple_symlink.tst
command_expansion/: backtick.ltst  find.tst  quotes.ltst  simple.ltst  tmp.notst  tricky.ltst
dot/: path.ltst  simple.ltst  simple.text
echo/: casa.sh  echo.tst  echo_backslash.ltst  echo_multiple.tst  echo_option_e.ltst  echo_option_ee.tst  echo_option_n.tst  echo_random.ltst  escape.ltst  first_is_number.tst  house.tst  options.ltst
exclamation/: excla1.tst  excla2.tst  excla3.tst
exit/: errors.ltst  exit.ltst  no_arg_return.ltst
export/: difficult_vars.ltst  hard.ltst  simple.ltst  subenvironments.ltst  with_unset.ltst
for_loop/: assignment_after_for.tst  bad_syntax.ltst  bricked_for.tst  bricked_for_i.tst  expansion_in_clause.tst  no_in_clause.tst
functions/: args.ltst  fun_in_fun.tst  nested_2.tst  nested_3.tst  nesting_big.tst  newline_pars.tst  same_fun.tst  simple_functions.ltst  tricky.ltst  tricky1.tst  tricky2.tst  undefined.ltst
if_case/: if1.tst  if2.tst  if3.tst  if4.tst  if5.tst  if6.tst  if7.tst  if8.tst
pipe/: left_bad_command.tst  middle_bad_command.tst  mouette.ltst  multiple_sort.tst  multiple_sort_uniq.tst  pipe_newline.tst  pipe_redir.tst  right_bad_command.tst  simple_sort.tst  sort1.text  weird_syntax.tst
redir/: bad_ending.tst  beginning1.tst  clobber.ltst  greatand.ltst  multiple_dgreat.tst  multiple_great.tst  redir_in.ltst  redir_lessgreat.tst  redir_out.tst  simple_dgreat.tst  simple_great.tst  simple_great_multiple.tst  simple_greats.tst  simple_lessgreat1.tst
simple_commands/: cat.tst  cat_input.text  ls_bad.tst  never_executed_bad_command.tst  unknown_command.tst
single_quote/: command_quoted.tst  reserved_quoted.tst  simple_echo.tst  simple_joined.tst  simple_multiple.tst
special_variable/: echo.ltst
src/: Makefile.am  main.c
src/ast/: Makefile.am  arguments.c  arguments.h  ast.c  ast.h
src/backend/: Makefile.am  backend.c  backend.h
src/builtin/: Makefile.am  alias.c  alias.h  cd.c  cd.h  dot.c  dot.h  echo.c  echo.h  export.c  export.h  unset.c  unset.h
src/executor/: Makefile.am  executor.c  executor.h
src/functions/: Makefile.am  functions.c  functions.h
src/hashmap/: Makefile.am  htab.c  htab.h
src/lexer/: Makefile.am  data_free.c  data_free.h  lexer.c  lexer.h  token.h
src/linked_list/: Makefile.am  list.c  list.h
src/parser/: Makefile.am  parser.c  parser.h
src/variable/: Makefile.am  command_expansion.c  command_expansion.h  funargs.c  funargs.h  variable.c  variable.h
src/vector/: Makefile.am  vector.h  vector_access.c  vector_create.c
subshell/: t.tst  t2.tst  t3.tst  test.ltst  var_funs.ltst  vars_funs.ltst
tests/: testsuite.sh
tests/IFS/: ifs.ltst  ifs_newline.tst  ifs_newline2.tst  ifs_newline3.tst  ifs_newline4.tst
tests/alias/: builtin1.tst  builtin11.tst  builtin12.tst  builtin13.tst  builtin14.tst  builtin15.tst  builtin16.tst  builtin17.tst  builtin18.tst  builtin19.tst  builtin2.tst  builtin20.tst  builtin21.tst  builtin22.tst  builtin23.tst  builtin3.tst  builtin4.tst  builtin5.tst  builtin6.tst  builtin7.tst  builtin8.tst  builtin9.tst  fun.tst  just_builtin.tst  just_builtin1.tst  just_builtin2.tst  just_builtin3.tst  no_arg.tst  tricky.tst
tests/and_or/: and_or_3.tst  and_or_4.tst  and_or_6.tst  and_or_7.tst
tests/blocks/: indent.tst  missing_semicolon.tst  no_spaces.tst  redir.ltst  simple.ltst  unknown_command.tst
tests/break/: break.ltst  continue.ltst
tests/case/: error_cases.ltst  lots_of_a.tst  simple.ltst  simple_indent.tst  spaces.ltst
tests/cd/: bad_number_parameters.tst  bad_path.tst  double_cd.tst  go_back.tst  go_home.tst  go_root.tst  go_root2.tst  go_tmp.tst  init_path.tst  simple_ls.tst  simple_path.tst  simple_symlink.tst
tests/command_expansion/: backtick.ltst  find.tst  quotes.ltst  simple.ltst  tmp.notst  tricky.ltst
tests/dot/: path.ltst  simple.ltst  simple.text
tests/echo/: casa.sh  echo.tst  echo_backslash.ltst  echo_multiple.tst  echo_option_e.ltst  echo_option_ee.tst  echo_random.ltst  escape.ltst  first_is_number.tst  house.tst  options.ltst
tests/exclamation/: excla3.tst
tests/exit/: errors.ltst  exit.ltst  no_arg_return.ltst
tests/export/: difficult_vars.ltst  hard.ltst  simple.ltst  subenvironments.ltst  with_unset.ltst
tests/for_loop/: assignment_after_for.tst  bad_syntax.ltst  bricked_for.tst  bricked_for_i.tst  expansion_in_clause.tst  no_in_clause.tst
tests/functions/: args.ltst  fun_in_fun.tst  nested_2.tst  nested_3.tst  nesting_big.tst  newline_pars.tst  same_fun.tst  simple_functions.ltst  tricky.ltst  tricky1.tst  tricky2.tst  undefined.ltst
unset/: path_and_dot.tst  variable.ltst
variables/: assignment_constraints.ltst  assignment_tricky.ltst  assignments_and_special_builtins.ltst  quote_behaviour.ltst  simple_assignation.ltst  step2_dementor.ltst
while_until/: error_while1.tst  error_while2.tst  error_while3.tst  simple_until1.tst  simple_while1.tst  simple_while2.tst  while_conditions1.tst  while_conditions2.tst  while_conditions3.tst  while_in_while.tst  while_indent.tst
(+67 files in other folders)
